--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
             <p>Currently I'm a student of The Shri ShankaraChairya Technical Campus, where I'm pursuing my B.tech Engeering. </p>
 
             <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100072382877916" target="_blank
+                "><i class='bx bxl-facebook'></i></a>
+                <a href="https://twitter.com/Anubhav77308505" target="_blank"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.instagram.com/anubhav0792/" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="https://www.linkedin.com/in/anubhav-singh-90b02828a/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/Anubhav2923 " target="_blank"><i class='bx bxl-github'></i></a>
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="CV/CV_Resume.pdf " target="_blank" class="btn">Download CV</a>
         </div>
 
         <div class="profession-container">
@@ -67,25 +69,159 @@
         </div>
 
         <div class="home-img">
-            <img src="images/home.png" alt="">
+            <img src="Images/logo-home.png" alt="">
         </div>
         
     </section>
 
     <!-- about section design -->
 
-    <section class="about" id="about">
+     <section class="about" id="about">
         <div class="about-img">
-            <img src="Images/about.png" alt="">
+            <img src="Images/about-img.png" alt="">
         </div>
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span> </h2>
+            <h3>
+                Hi there, welcome to my website! I'm cristian, a passionate web developer who enjoys learning new technologies
+                and solving problems with code
+            </h3>
+            <p>
+                This website is my personal blog where I write about web development
+                topics that interest me and inspire me
+            </p>
+            <p>
+                Thnakyou for visiting my website and getting to know me better. I hopr you enjoyed reading my blogs posts and found them useful and informative. If you want to read more of my posts,subscibe to my newsletter where I send weekly updates on web development trends and tips. If you have any feedback or suggestions, please let me know. I'd love to hear form you.
+            </p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+
+    </section> 
+
+    <section class="services" id="services">
+        <h2 class="heading">My <span>Services</span></h2>
+
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web Development</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi tempore beatae repellat maxime sequi harum quasi odit consequatur, at autem?
+                </p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+            <div class="services-box">
+                <i class='bx bxs-paint'></i>
+                <h3>Web Designer</h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint repudiandae architecto natus quidem aperiam ea saepe asperiores nulla vel tenetur, corrupti a hic voluptatem assumenda animi similique, illo, voluptates nihil.
+                </p>
+                <a href="#" class="btn">Read More</a>
+            </div>
         </div>
     </section>
 
-    <script src="js/script.js"></script>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <!-- ----------Protfolio Section ----------- -->
+
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Web  <span>projects</span> </h2>
+
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="Images/portfolio1.jpg" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="Images/portfolio2.jpg" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="Images/portfolio3.jpg" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="Images/portfolio4.jpg" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="Images/portfolio5.jpg" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="Images/portfolio6.jpg" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae?</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ======== Cotact section design ========= -->
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email Address">
+            </div>
+            <div class="input-box">
+                <input type="number" placeholder="Mobile Number">
+                <input type="text" placeholder="Email Subject">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 | All Rights Reserved.</p>
+        </div>
+
+        <div class="footer-iconTop">
+            <a href="#home"> <i class='bx bx-up-arrow-alt'></i></a>
+        </div>
+    </footer>
+
+     <!-- scroll reveal -->
+     <script src="https://unpkg.com/scrollreveal"></script>
+
+     <!-- swiper js -->
+     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+ 
+     <!-- custom js -->
+     <script src="js/script.js"></script>
     
 </body>
 </html>
