--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <i class='bx bxs-paint'></i>
                 <h3>Web Designer</h3>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint repudiandae architecto natus quidem aperiam ea saepe asperiores nulla vel tenetur, corrupti a hic voluptatem assumenda animi similique, illo, voluptates nihil.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex sed voluptate voluptatem, id deserunt explicabo accusamus modi laborum numquam at?
                 </p>
                 <a href="#" class="btn">Read More</a>
             </div>
