--- a/index.html
+++ b/index.html
@@ -132,45 +132,45 @@
                 <img src="Images/portfolio1.jpg" alt="">
 
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Calculator </h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae?</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href=""><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
                 <img src="Images/portfolio2.jpg" alt="">
 
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Usablity Hub</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae?</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://anubhav2923.github.io/usabilityhub_homepage_clone/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
                 <img src="Images/portfolio3.jpg" alt="">
 
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Gaming Site</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae?</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://anubhav2923.github.io/Gaming-website/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
                 <img src="Images/portfolio4.jpg" alt="">
 
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Disney+ Hotstar </h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae?</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://anubhav2923.github.io/Disney_Hotstar_Clone/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
                 <img src="Images/portfolio5.jpg" alt="">
 
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Codeacademy </h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae?</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://anubhav2923.github.io/codecademy_landing_page/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
