--- a/index.html
+++ b/index.html
@@ -124,21 +124,19 @@
           <i class="bx bx-code-alt"></i>
           <h3>Web Development</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            tempore beatae repellat maxime sequi harum quasi odit consequatur,
-            at autem?
+            
           </p>
-          <a href="#" class="btn">Read More</a>
+          <!-- <a href="#" class="btn">Read More</a> -->
         </div>
         <div class="services-box">
           <i class="bx bxs-paint"></i>
           <h3>Web Designer</h3>
-          <p>
+          <!-- <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex sed
             voluptate voluptatem, id deserunt explicabo accusamus modi laborum
             numquam at?
           </p>
-          <a href="#" class="btn">Read More</a>
+          <a href="#" class="btn">Read More</a> -->
         </div>
       </div>
     </section>
@@ -149,27 +147,27 @@
       <h2 class="heading">Web <span>projects</span></h2>
 
       <div class="portfolio-container">
-        <div class="portfolio-box">
+        <!-- <div class="portfolio-box">
           <img src="Images/portfolio1.jpg" alt="" />
 
           <div class="portfolio-layer">
             <h4>Calculator</h4>
-            <p>
+             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Doloremque, quae?
-            </p>
+            </p> 
             <a href=""><i class="bx bx-link-external"></i></a>
           </div>
-        </div>
+        </div> -->
         <div class="portfolio-box">
           <img src="Images/portfolio2.jpg" alt="" />
 
           <div class="portfolio-layer">
             <h4>Usablity Hub</h4>
-            <p>
+            <!-- <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Doloremque, quae?
-            </p>
+            </p> -->
             <a href="https://anubhav2923.github.io/usabilityhub_homepage_clone/"
               ><i class="bx bx-link-external"></i
             ></a>
@@ -180,10 +178,10 @@
 
           <div class="portfolio-layer">
             <h4>Gaming Site</h4>
-            <p>
+            <!-- <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Doloremque, quae?
-            </p>
+            </p> -->
             <a href="https://anubhav2923.github.io/Gaming-website/"
               ><i class="bx bx-link-external"></i
             ></a>
@@ -194,10 +192,10 @@
 
           <div class="portfolio-layer">
             <h4>Disney+ Hotstar</h4>
-            <p>
+            <!-- <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Doloremque, quae?
-            </p>
+            </p> -->
             <a href="https://anubhav2923.github.io/Disney_Hotstar_Clone/"
               ><i class="bx bx-link-external"></i
             ></a>
@@ -208,10 +206,10 @@
 
           <div class="portfolio-layer">
             <h4>Codeacademy</h4>
-            <p>
+            <!-- <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Doloremque, quae?
-            </p>
+            </p> -->
             <a href="https://anubhav2923.github.io/codecademy_landing_page/"
               ><i class="bx bx-link-external"></i
             ></a>
@@ -221,12 +219,11 @@
           <img src="Images/portfolio6.jpg" alt="" />
 
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Doloremque, quae?
-            </p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
+            <h4>Shopping Website</h4>
+            <!-- <p>
+              A simple myntra landing page clone design 
+            </p> -->
+            <a href="https://anubhav2923.github.io/shoping_website/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
       </div>
