--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           ></a>
         </div>
 
-        <a href="CV/CV_Resume.pdf " target="_blank" class="btn">Download CV</a>
+        <a href="CV/Resume_main.pdf " target="_blank" class="btn">Download CV</a>
       </div>
 
       <div class="profession-container">
