--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <!-- <p>
               A simple myntra landing page clone design 
             </p> -->
-            <a href="https://anubhav2923.github.io/E-commerce-site/><i class="bx bx-link-external"></i></a>
+            <a href="https://anubhav2923.github.io/E-commerce-site/"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
       </div>
